force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fiancial Account relationship with Account</description>
    <label>Application</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Accounts (Application)</relationshipLabel>
    <relationshipName>FinancialAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>