force-app/main/default/objects/FinServ__FinancialAccount__c/fields/ClosureReason__c.field-meta.xml
<CustomField>
    <fullName>ClosureReason__c</fullName>
    <description>Reason for closing the financial account.</description>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Maintenance Fees</fullName>
            </value>
            <value>
                <fullName>Account no longer needed</fullName>
            </value>
            <value>
                <fullName>Moved out of the country</fullName>
            </value>
            <value>
                <fullName>Not able to maintain account</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>