force-app/main/default/objects/FinServ__FinancialAccount__c/fields/DailyWithdrawalLimit__c.field-meta.xml
<CustomField>
    <fullName>DailyWithdrawalLimit__c</fullName>
    <description>Daily Withdrawal Limit</description>
    <label>Daily Withdrawal Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>