force-app/main/default/objects/FinServ__FinancialAccount__c/fields/DateClosed__c.field-meta.xml
<CustomField>
    <fullName>DateClosed__c</fullName>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>