force-app/main/default/objects/FinServ__FinancialAccount__c/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <description>Last Updated</description>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>