force-app/main/default/objects/FinServ__FinancialAccount__c/fields/MeridianApplicationNumber__c.field-meta.xml
<CustomField>
    <fullName>MeridianApplicationNumber__c</fullName>
    <description>Field to save Meridian Application Number</description>
    <label>Meridian Application Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>