force-app/main/default/objects/FinServ__FinancialAccount__c/fields/MeridianApplicationStatus__c.field-meta.xml
<CustomField>
    <fullName>MeridianApplicationStatus__c</fullName>
    <description>To store Meridian Application Status</description>
    <label>Meridian Application Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>