force-app/main/default/objects/FinServ__FinancialAccount__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Financial Account sub status</description>
    <label>Stage</label>
    <length>80</length>
    <type>Text</type>
</CustomField>