force-app/main/default/objects/FinServ__FinancialAccount__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>AccountNumber__c</columns>
    <columns>Balance__c</columns>
    <columns>DateOpened__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>